fix: telegram flow
